# json-cpp_python

./: CMakeLists.txt  build-linux.sh  build.ps1  create_docs.sh  pyproject.toml  setup.py  test.sh
docs/: conf.py  json_cpp2.rst
docs/_build/doctrees/: environment.pickle  index.doctree  json_cpp2.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  json_cpp2.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
include/: json_descriptor.h
json_cpp2/: __init__.py  json_list.py  json_object.py  json_parsable.py  json_parser.py
json_cpp2.egg-info/: PKG-INFO  SOURCES.txt
src/: json_descriptor.cpp  json_python.cpp  json_python_tests.cpp
test/: json_object_tests.py
wheelhouse/: json_cpp2-0.0.101-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  json_cpp2-0.0.101-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  json_cpp2-0.0.101-cp310-cp310-musllinux_1_1_aarch64.whl  json_cpp2-0.0.101-cp310-cp310-musllinux_1_1_x86_64.whl  json_cpp2-0.0.101-cp310-cp310-win_amd64.whl  json_cpp2-0.0.101-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  json_cpp2-0.0.101-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  json_cpp2-0.0.101-cp311-cp311-musllinux_1_1_aarch64.whl  json_cpp2-0.0.101-cp311-cp311-musllinux_1_1_x86_64.whl  json_cpp2-0.0.101-cp311-cp311-win_amd64.whl  json_cpp2-0.0.101-cp36-cp36m-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  json_cpp2-0.0.101-cp36-cp36m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  json_cpp2-0.0.101-cp36-cp36m-musllinux_1_1_aarch64.whl  json_cpp2-0.0.101-cp36-cp36m-musllinux_1_1_x86_64.whl  json_cpp2-0.0.101-cp36-cp36m-win_amd64.whl  json_cpp2-0.0.101-cp37-cp37m-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  json_cpp2-0.0.101-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  json_cpp2-0.0.101-cp37-cp37m-musllinux_1_1_aarch64.whl  json_cpp2-0.0.101-cp37-cp37m-musllinux_1_1_x86_64.whl  json_cpp2-0.0.101-cp37-cp37m-win_amd64.whl  json_cpp2-0.0.101-cp38-cp38-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  json_cpp2-0.0.101-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  json_cpp2-0.0.101-cp38-cp38-musllinux_1_1_aarch64.whl  json_cpp2-0.0.101-cp38-cp38-musllinux_1_1_x86_64.whl  json_cpp2-0.0.101-cp38-cp38-win_amd64.whl  json_cpp2-0.0.101-cp39-cp39-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  json_cpp2-0.0.101-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  json_cpp2-0.0.101-cp39-cp39-musllinux_1_1_aarch64.whl  json_cpp2-0.0.101-cp39-cp39-musllinux_1_1_x86_64.whl  json_cpp2-0.0.101-cp39-cp39-win_amd64.whl  json_cpp2-0.0.101-pp37-pypy37_pp73-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  json_cpp2-0.0.101-pp37-pypy37_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  json_cpp2-0.0.101-pp37-pypy37_pp73-win_amd64.whl  json_cpp2-0.0.101-pp38-pypy38_pp73-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  json_cpp2-0.0.101-pp38-pypy38_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  json_cpp2-0.0.101-pp38-pypy38_pp73-win_amd64.whl  json_cpp2-0.0.101-pp39-pypy39_pp73-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  json_cpp2-0.0.101-pp39-pypy39_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  json_cpp2-0.0.101-pp39-pypy39_pp73-win_amd64.whl
(+1 files in other folders)
